# mol-gen

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment-lock.yml  environment.yml  preprocess.yml  preprocessing.yml  setup.cfg
docs/: config.md
examples/: preprocessing.yml  train.yml  training.yml
examples/all_drug_like/: training.yml
examples/all_drug_like/checkpoints/: model.09.h5  model.11.h5
examples/all_drug_like/trained/: string_lookup.json
mol_gen/: exceptions.py  filter_molecules.py  utils.py
mol_gen/config/preprocessing/: convert.py  filter.py
mol_gen/preprocessing/: convert_molecules.py  filter.py  filter_molecules.py  preprocessor.py
notebooks/: smiles_cleaner.ipynb
notebooks/templates/: model_evaluation_report.ipynb
scripts/: run_preprocessing.py  run_training.py
src/mol_gen/: exceptions.py  utils.py
src/mol_gen/molecule_generation/: molecule_generator.py
src/mol_gen/preprocessing/: convert.py  dask.py  filter.py  preprocessor.py  selfies.py
src/mol_gen/scripts/: base.py  molecule_generation.py  preprocessing.py  run_molecule_generation.py  run_preprocessing.py  run_training.py  (+1 more)
tests/: test_filter_molecules.py  test_utils.py
tests/data/: chembl.parquet
tests/preprocessing/: test_convert.py  test_convert_molecules.py  test_dask.py  test_filter.py  test_filter_molecules.py  test_preprocessor.py  test_selfies.py
tests/scripts/: test_molecule_generation.py  test_preprocessing.py  test_run_preprocessing.py  test_run_training.py  test_training.py
tests/training/: test_dataset.py  test_string_lookup.py
(+64 files in other folders)
