[metadata]
version = 0.1.0.dev0
name = mol_gen
description = Project for generation of molecules.
url = https://github.com/a-whitehouse/mol-gen/
author = Andrew Whitehouse
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
package_dir = =src
packages = find:
python_requires = >= 3.9

[options.entry_points]
console_scripts =
    preprocess = mol_gen.scripts.run_preprocessing:main
    train = mol_gen.scripts.run_training:main

[options.packages.find]
where = src
