[metadata]
version = 0.1.0.dev0
name = mol_gen
description = Project for generation of molecules.
url = https://github.com/a-whitehouse/mol-gen/
author = Andrew Whitehouse
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
package_dir = =src
packages = find:
python_requires = >= 3.10

[options.entry_points]
console_scripts =
    mol-gen = mol_gen.scripts.base:cli

[options.packages.find]
where = src
